...
    const isWeb = Platform.OS === 'web';
    const s = ds[this.context];
    const color = getColor(this.context);
    const hasRead = !this.isCreation && book.status === BOOK_STATUSES.READ;

    return (
      <Dialog testID='changeStatusModal' style={s.dialog}>
        <View style={s.header}>
          <TouchIcon name='arrow-left' style={s.icon} size={20} color={color.PrimaryText} onPress={this.onBack} />
          <Text style={s.title} numberOfLines={1}>
            {book.title}
          </Text>
        </View>
...
            onConfirm={this.setDate}
            onCancel={this.closeDatePicker}
          />
        )}

        <Button
          testID='applyButton'
          disabled={this.disabled}
          label={t('button.apply')}
          style={s.button}
          textStyle={s.buttonText}
          onPress={this.save}
          bordered
...
