...

  render() {
    const { search, selected } = this.state;
    const s = ds[this.context];

    return (
      <Dialog testID='bookSelectModal' modalStyle={s.borderRadius}>
        <BookSelectHeader search={this.state.search} onChange={this.setSearch} />
        <BookList search={search} selected={!!selected && selected.id} onSelect={this.selectBook} />
        {selected && (
          <TouchableOpacity style={[s.button, s.borderRadius]} onPress={this.setBookSelected} testID='doSelectBook'>
            <Text style={s.text}>{t('button.apply')}</Text>
          </TouchableOpacity>
...
